# hdd-autopilot

./: .gitignore  Cargo.toml  README.md  go.mod
.github/workflows/: release.yml
cmd/hdd/: main.go
crates/mining/: Cargo.toml
crates/mining-cuda-sys/: Cargo.toml  build.rs
crates/mining-cuda-sys/src/: lib.rs
crates/mining-metal-sys/: Cargo.toml  build.rs
crates/mining-metal-sys/src/: lib.rs
crates/mining-opencl-sys/: Cargo.toml  build.rs
crates/mining-opencl-sys/src/: lib.rs
crates/mining/src/: client.rs  config.rs  error.rs  gpu.rs  lib.rs  messages.rs  protocol.rs
crates/mining/src/backend/: cpu.rs  cuda.rs  metal.rs  mod.rs  opencl.rs  tuning.rs  types.rs
crates/mining/src/runner/: gpu.rs  mod.rs  support.rs
examples/: puzzle_2048_sim.rs
internal/auth/: auth.go  auth_test.go  cache.go  prompt.go
internal/cli/: run.go  run_test.go
internal/client/: checkin.go  game.go  http.go  http_test.go  scratch.go
internal/config/: path.go  path_test.go
internal/features/checkin/: log.go  run.go  run_test.go
internal/features/scratch/: log.go  run.go  run_test.go  ui.go
internal/features/sheepmatch/: account.go  round.go  run.go  run_test.go  snapshot.go  summary.go
internal/logging/: result_log.go
internal/mining/: benchmark.go  client.go  config.go  cycle.go  digest.go  entry.go  entry_test.go  errors.go  job.go  runner.go  status.go  store.go  types.go  workers.go
internal/model/: helpers.go  helpers_test.go  types.go
internal/solver/: search.go  solver.go  solver_test.go
internal/terminal/: escape.go  escape_other.go  escape_test.go  escape_windows.go
native/balance-miner-gpu/: CMakeLists.txt
native/balance-miner-gpu/include/app/: pool_types.hpp  runner.hpp
native/balance-miner-gpu/scripts/: build-native.bat
native/balance-miner-gpu/src/: balance_code_store.cpp  config.cpp  job.cpp  pool_client_winhttp.cpp  pool_types.cpp  runner.cpp  solver.cu
native/hdd-miner-gpu/: CMakeLists.txt
native/hdd-miner-gpu/include/app/: config.hpp  path.hpp  pool_types.hpp  runner.hpp
native/hdd-miner-gpu/scripts/: build-native.bat
native/hdd-miner-gpu/src/: config.cpp  runner.cpp
native/invite-miner-gpu/: CMakeLists.txt
native/invite-miner-gpu/include/app/: pool_client.hpp  pool_types.hpp  runner.hpp
native/invite-miner-gpu/scripts/: build-native.bat
native/invite-miner-gpu/src/: config.cpp  main.cpp  path.cpp  pool_client_winhttp.cpp  pool_types.cpp  runner.cpp
native/mining-balance-cuda/: CMakeLists.txt
native/mining-balance-cuda/include/app/: config.hpp  pool_client.hpp  pool_types.hpp  solver.hpp
native/mining-balance-cuda/scripts/: build-native.bat
native/mining-balance-cuda/src/: config.cpp  main.cpp  runner.cpp
native/mining-cuda/: CMakeLists.txt
native/mining-cuda-common/include/app_shared/: code_store.hpp  pool_client.hpp  runner.hpp  (+2 more)
native/mining-cuda-common/src/: code_store.cpp  pool_client_winhttp.cpp  pool_types.cpp  runner.cpp
native/mining-cuda/scripts/: build-native.bat
native/mining-cuda/src/: config.cpp  ffi.cpp  job.cpp  main.cpp  pool_client_winhttp.cpp  runner.cpp  solver.cu
native/mining-invite-cuda/: CMakeLists.txt
native/mining-invite-cuda/scripts/: build-native.bat
native/mining-invite-cuda/src/: config.cpp  path.cpp  runner.cpp
native/mining-metal/: CMakeLists.txt
native/mining-metal/include/app/: embedded_kernel.hpp  ffi.hpp  job.hpp
native/mining-metal/src/: ffi.mm  solver.mm
native/mining-opencl/: CMakeLists.txt
native/mining-opencl/include/app/: config.hpp  embedded_kernel.hpp  ffi.hpp  pool_client.hpp  runner.hpp
native/mining-opencl/scripts/: build-native.bat
native/mining-opencl/src/: ffi.cpp  invite_store.cpp  job.cpp  pool_types.cpp  runner.cpp  solver.cpp
scripts/: build-aarch64-apple-darwin.sh  build-aarch64-unknown-linux-gnu.sh  build-linux-amd64.sh  build-linux-arm64.sh  build-macos-amd64.sh  build-macos-arm64.sh  build-win-x64.bat  build-x86_64-apple-darwin.sh  build-x86_64-pc-windows-msvc.bat  build-x86_64-unknown-linux-gnu.sh  release.bat  release.sh  smoke-batch-menu.bat  smoke-batch-menu.ps1  upload-release.ps1  upload-release.sh
src/: lib.rs  main.rs
src/api/: client.rs  cookies.rs  endpoints.rs  mod.rs
src/cli/: batch.rs  mining.rs  mod.rs  prompt.rs
src/model/: arrow_out.rs  auth.rs  checkin.rs  flowfree.rs  lightsout.rs  logic_games.rs  maze.rs  memory.rs  minesweeper.rs  mod.rs  nonogram.rs  puzzle_15.rs  puzzle_2048.rs  scratch.rs  sheepmatch.rs  sokoban.rs  sudoku.rs
src/runtime/: mod.rs  paths.rs
src/solver/: mod.rs  search.rs
src/solver/arrow_out/: mod.rs
src/solver/flowfree/: mod.rs
src/solver/lightsout/: mod.rs
src/solver/maze/: mod.rs
src/solver/memory/: mod.rs  strategy.rs  tests.rs
src/solver/minesweeper/: mod.rs
src/solver/nonogram/: mod.rs
src/solver/puzzle_15/: board.rs  mod.rs  search.rs  tests.rs
src/solver/puzzle_2048/: board.rs  mod.rs  strategy.rs  tests.rs
src/solver/sokoban/: mod.rs
src/solver/sudoku/: mod.rs  solver.rs  tests.rs
src/storage/: cache.rs  mod.rs  normalize.rs
src/ui/: mod.rs  other.rs  render.rs  windows.rs
src/workflows/: common.rs  free_play.rs  limited_free_play.rs  logic_game_common.rs  mod.rs  unlimited_free_play.rs
src/workflows/arrow_out/: mod.rs
src/workflows/checkin/: auth.rs  log.rs  mod.rs  run.rs
src/workflows/flowfree/: log.rs  mod.rs  round.rs  types.rs
src/workflows/lightsout/: log.rs  mod.rs  round.rs  types.rs
src/workflows/maze/: log.rs  mod.rs  round.rs  types.rs
src/workflows/memory/: log.rs  mod.rs  round.rs  types.rs
src/workflows/minesweeper/: log.rs  mod.rs  round.rs  types.rs
src/workflows/nonogram/: log.rs  mod.rs  round.rs  types.rs
src/workflows/puzzle_15/: log.rs  mod.rs  round.rs  types.rs
src/workflows/puzzle_2048/: log.rs  mod.rs  round.rs  tests.rs  types.rs
src/workflows/scratch/: auth.rs  log.rs  mod.rs  round.rs
src/workflows/sheepmatch/: auth.rs  log.rs  mod.rs  round.rs  snapshot.rs  tests.rs
src/workflows/sokoban/: log.rs  mod.rs  round.rs  types.rs
src/workflows/sudoku/: auth.rs  log.rs  mod.rs  round.rs  types.rs
(+6 files in other folders)
